--- a/index.html
+++ b/index.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Prueba</h1>
-    <h2>prueba 2</h2>
+    <nav class="navbar navBackground">
+        <div class="container-fluid">
+          <a class="navbar-brand navColorFont" href="#">
+            MeliTOOLS
+          </a>
+        </div>
+      </nav>
+      <br>
+      <br>
+      <div class="container">
+        <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Codigo cliente</th>
+                <th scope="col">URL</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">delouy</th>
+                <td>delouy.mlibretest.fenicio.com.uy</td>
+              </tr>
+            </tbody>
+          </table>
+      </div>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
