--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr id="delouy">
                 <th scope="row">delouy</th>
                 <td>delouy.mlibretest.fenicio.com.uy</td>
               </tr>
@@ -36,5 +36,10 @@
           </table>
       </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
+    <script>
+      document.querySelector("#delouy").addEventListener("click", (e) => {
+       console.log(e.target.innerText)
+      })
+    </script>
+  </body>
 </html>
