agrega busqueda de articulos por official store id

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
               </tr>
             </thead>
             <tbody>
-              <tr id="delouy">
-                <th scope="row">delouy</th>
+              <tr>
+                <th scope="row" id="delouy" class="client">delouy</th>
                 <td>delouy.mlibretest.fenicio.com.uy</td>
               </tr>
             </tbody>
