--- a/tools.html
+++ b/tools.html
@@ -28,6 +28,7 @@
         <input type="text" name="Usertoken" id="_token" placeholder="Token">
         <input type="text" name="user" id="_userId" placeholder="User ID">
         <input type="text" name="CategoyId" id="_categoryId" placeholder="Category ID">
+        <input type="text" name="officialStoreId" id="_oficialStoreId" placeholder="Official Store ID">
         <br><br>    
         <details>
             <summary>
@@ -39,6 +40,8 @@
             <button type="text" name="BuscarSoloActivos" id="_searchFromMeliMoreMil">Listar publicaciones de Mercado Libre +1000 items</button>
             <br><br>
             <button type="text" name="buscarEnMeliPorCategoria" id="_searchFromMeliByCategory">Listar publicaciones de Mercado Libre por Categoria</button>
+            <br><br>
+            <button type="text" name="buscarEnMeliPorCategoria" id="_searchFromMeliByOfficialStoreId">Listar publicaciones de Mercado Libre por Official store ID</button>
             <br><br>
         </details>    
         <br>
@@ -84,7 +87,8 @@
         <div id="_response" style="border-color: black; border-style: solid; padding: 20px;">
             
         </div>
-        <script src="searchItemsFromMeli.js"></script>
+        <!---<script src="searchItemsFromMeli.js"></script>-->
+        <script src="./js/tools.js"></script>
       </body>
     </body>
 </html>
