--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
       </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
-      document.querySelector("#delouy").addEventListener("click", (e) => {
+      document.querySelector("#delouy").addEventListener("click",async (e) => {
        console.log(e.target.innerText)
+       let result = await fetch("http://localhost:8090/clients/delouy")
+       let data = await result.json()
+       console.log(data)
+       localStorage.setItem("userAccessToken",data["access_token"])
+       localStorage.setItem("userId", data["user_id"])
+       location.assign("toolsDos.html")
       })
     </script>
   </body>
