Ajusta acceso a los datos privados del cliente

--- a/toolsDos.html
+++ b/toolsDos.html
@@ -22,7 +22,7 @@
         <br><br>
         <label id="_userId">*</label>
         <br><br>
-        <input type="button" class="btn btn-secondary" value="Refrescar Token">
+        <input type="button" class="btn btn-secondary" id="_refrestoken" value="Refrescar Token">
     </div>
     <br><br>
 
