--- a/index.html
+++ b/index.html
@@ -24,28 +24,15 @@
               <tr>
                 <th scope="col">Codigo cliente</th>
                 <th scope="col">URL</th>
-                <th scope="col"></th>
+                <th scope="col">Modulo</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row" id="delouy" class="client">delouy</th>
-                <td>delouy.mlibretest.fenicio.com.uy</td>
-              </tr>
+            <tbody id="_bodyTablaCliente">
+              
             </tbody>
           </table>
       </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script>
-      document.querySelector("#delouy").addEventListener("click",async (e) => {
-       console.log(e.target.innerText)
-       let result = await fetch("http://localhost:8090/clients/delouy")
-       let data = await result.json()
-       console.log(data)
-       localStorage.setItem("userAccessToken",data["access_token"])
-       localStorage.setItem("userId", data["user_id"])
-       location.assign("toolsDos.html")
-      })
-    </script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
